--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gh-oauth-server",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "pm2": "pm2 startOrRestart pm2.json"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
